@@ -31,12 +31,16 @@
 #include<cstring>
 #include<cctype>
 #include<utility>
+#define BOOST_FILESYSTEM_VERSION 3
+#include <boost/filesystem.hpp>
+#include <boost/filesystem/fstream.hpp>
+using namespace boost::filesystem;
 
+using std::string;
 using std::stack;
 using std::istream;
 using std::cin;
-using std::ifstream;
-using boost::shared_ptr;
+using std::endl;
 using namespace shell::CMD;
 
 // the initial size of the line buffer
@@ -44,28 +48,149 @@ using namespace shell::CMD;
 
 shell::CMD::CMDTclFeed::CMDTclFeed()
  : lex_buf(new char[AV_CMD_LEXER_BUF_SIZE]),
-   rp(lex_buf), fp(lex_buf)
+   rp(0), fp(0), bufsize(AV_CMD_LEXER_BUF_SIZE), file_stream(NULL), gEnv(NULL)
 {}
 
 shell::CMD::CMDTclFeed::~CMDTclFeed() {
   delete[] lex_buf;
-  rp = NULL;
-  fp = NULL;
   if(file_stream != NULL) {
     file_stream->close();
     file_stream = NULL;
   }
 }
 
-istream& shell::CMD::CMDTclFeed::cstream() {
+bool shell::CMD::CMDTclFeed::initialise(Env * mg_env, const std::string& fn) {
+  // set the environment
+  if(mg_env == NULL) return false;
+  gEnv = mg_env;
+
+  // set the initial file
+  if(fn.empty()) return true;   // no initial file
+
+  // check the file
+  if(!exists(fn) || !is_regular_file(fn)) { // cannot open the file, error
+    gEnv->stdOs << "Error: Cannot open script file \"" << fn << "\"!" << endl;
+    return false;
+  }
+
+  // open the file
+  file_stream = new std::ifstream(fn.c_str());
+  if(!file_stream->good()) {   // unkown error, should not going here
+    gEnv->stdOs << "Error: Cannot open script file \"" << fn << "\"!" << endl;
+    return false;
+  } else
+    return true;
+}
+
+string shell::CMD::CMDTclFeed::getline() {
+  if(rp == fp) {                // empty
+    rp = 0;
+    getline_priv();
+  }
+
+  unsigned int start = rp;      // record the start point
+  int bracket_count = 0;
+  bool quote = false;
+  bool backslash = false;
+  // record the position of backslash as it may be rewritten to blank
+  unsigned int backslash_pos = 0;
+  bool comment = false;
+
+  while(true) {
+    // analyse the buffer
+    while(rp != fp) {
+      if(backslash && quote) {  // backslash in quote is special char
+        rp++; backslash = false;
+        continue;
+      }
+      
+      if(quote) {               // quote
+        if(lex_buf[rp++] == '\"') quote = false;
+        continue;
+      }
+
+      if(comment && lex_buf[rp] != '\n') { // comment
+        lex_buf[rp++] = ' ';
+        continue;
+      }
+
+      if(lex_buf[rp] == '[' || lex_buf[rp] == '(' || lex_buf[rp] == '{')
+        bracket_count++;
+
+      if(lex_buf[rp] == ']' || lex_buf[rp] == ')' || lex_buf[rp] == '}')
+        bracket_count--;
+      
+      if(lex_buf[rp] == '\\') {
+        backslash = true;
+        backslash_pos = rp;
+      }
+
+      if(lex_buf[rp] == '#') {
+        lex_buf[rp++] = ' '; comment = true;
+      }
+
+      if(lex_buf[rp] != ' ') backslash = false;
+
+      if(lex_buf[rp] == '\"') quote = true;
+
+      if(lex_buf[rp] == '\n') {
+        if(backslash) {         // using backslash to continue a line
+          lex_buf[backslash_pos] = ' ';
+          rp++;
+          continue;
+        } else if(bracket_count > 0) { // bracket not even yet
+          lex_buf[rp++] = ' ';
+          continue;
+        } else {
+          // should return a string
+          lex_buf[rp++] = ' ';
+          return string(lex_buf + start, rp - start);
+        }
+      }
+
+      rp++;
+    }
+    // read more
+    getline_priv();    
+  }
+}
+
+void shell::CMD::CMDTclFeed::getline_priv() {
+  bool m_cin;
+  istream& m_istm = cstream(m_cin);
+  if(m_cin) gEnv->show_cmd();
+  check_buf_size();
+  m_istm.getline(lex_buf+rp, (AV_CMD_LEXER_BUF_SIZE >> 1) - 1);
+  fp = rp + m_istm.gcount();    // record where buffer end
+  lex_buf[fp++] = '\n';         // add a \n as it is removed by getline()
+}
+
+istream& shell::CMD::CMDTclFeed::cstream(bool& m_cin) {
   if(file_stream != NULL) {
     if(file_stream->eof()) {    // end-of-a-file
       file_stream->close();
       file_stream = NULL;
+      m_cin = true;
       return cin;
     } else {
+      m_cin = false;
       return *file_stream;
     }
-  } else
+  } else {
+    m_cin = true;
     return cin;
+  }
+}
+
+void shell::CMD::CMDTclFeed::check_buf_size() {
+  if(bufsize - rp < (AV_CMD_LEXER_BUF_SIZE >> 1)) { // need increase the size
+    char* origin_buf = lex_buf;
+    lex_buf = new char[bufsize + AV_CMD_LEXER_BUF_SIZE];
+    memcpy(lex_buf, origin_buf, sizeof(char)*bufsize);
+    bufsize += AV_CMD_LEXER_BUF_SIZE;
+    delete[] origin_buf;
+
+    std::cout << "lex_buf size increased to " << bufsize << std::endl;
+
+  }
 }
