@@ -20,46 +20,38 @@
  */
 
 /* 
- * Input feeder for the Tcl command line environment
- * 02/07/2012   Wei Song
+ * The wrapper for Tcl interpreter
+ * 03/07/2012   Wei Song
  *
  *
  */
 
-#ifndef _CMD_TCL_FEED_H_
-#define _CMD_TCL_FEED_H_
+#ifndef _CMD_TCL_INTERP_H_
+#define _CMD_TCL_INTERP_H_
 
-#include<fstream>
-#include<iostream>
 #include "env.h"
+#include "cpptcl/cpptcl.h"
 
-namespace shell{
+namespace shell {
   namespace CMD {
-
-    class CMDTclFeed {
+    
+    class CMDTclInterp {
     public:
-      CMDTclFeed();
-      virtual ~CMDTclFeed();
+      CMDTclInterp();
 
-      //helper
-      bool initialise(Env *, const std::string& fn = "");
-      std::string getline();        // read a line of Tcl command
+      // helper
+      void initialise(Env *, CMDTclFeed *);
+      bool run();               // execute the interpreter
 
     private:
-      char* lex_buf;
-      unsigned int rp, fp;         // read pointer and full position
-      unsigned int bufsize;        // record the current buffer size
-      std::ifstream * file_stream; // the initial script file 
       Env * gEnv;
-      std::istream& cstream(bool&);
-      void getline_priv();      // the internal get line function to fill the buffer
-      void check_buf_size();    // increase the buffer if necessary
+      CMDTclFeed * cmdFeed;
+      Tcl::interpreter interp;  // the dynamic Tcl interpreter
     };
-
   }
 }
 
-#endif /* _CMD_TCL_FEED_H_ */
+#endif /* _CMD_TCL_INTERP_H_ */
 
 // Local Variables:
 // mode: c++
