@@ -31,6 +31,7 @@ OTHER_OBJS += $(wildcard ../../shell/*.o)
 OTHER_OBJS += $(wildcard ../../shell/cmd/*.o)
 OTHER_OBJS += $(wildcard ../../preproc/*.o)
 OTHER_OBJS += $(wildcard ../../averilog/*.o)
+OTHER_OBJS += $(wildcard ../../cpptcl/*.o)
 
 # targets
 all: $(TARGETS)
